--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,15 +28,23 @@ main {
     margin: 1em;
 } */
 
-header {
-    background-image: url("../img/polacks.jpg");
+.welcome {
+    background-image: url("../img/restaurant.jpg");
     background-size: cover;
     overflow: hidden;
     width: 100%;
     height: 200px;
     opacity: 0.5;
 }
+/*
+.welcome {
+    margin: 50px;
+    position: absolute;
+    overflow: hidden;
+    height: 200px;
 
+}
+*/
 header h1 {
     width:40rem;
     margin: 0 auto;
@@ -81,10 +89,14 @@ nav li {
     background-color: black;
     color: white;
     margin:50px;
+    padding:20px;
+    border: 2px dotted #ff9900;
 }
 
 #section2 {
     margin:50px;
+    padding:20px;
+    border: 2px dotted #fe7700;
 }
 
 botton {
